fixing spacing around logo and thus the header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -463,7 +463,7 @@ button, .button {
 	GENERAL LAYOUT
 *******************/
 header {
-  padding: 15px;
+  padding: 15px 0;
   overflow: hidden;
   position: relative; }
   header .home-link {
@@ -474,10 +474,25 @@ header {
 .logo {
   display: inline-block;
   width: 200px;
-  height: 46px; }
+  height: 46px;
+  margin-bottom: 20px; }
 
 .top-section {
   background-color: #e8e6e2; }
+
+.timestamp {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%); }
+
+.actions {
+  position: absolute;
+  bottom: 0;
+  right: -15px;
+  text-align: right; }
 
 .content--center, footer {
   max-width: 990px;
@@ -1194,7 +1209,7 @@ body.s-no-purchases .purchases_empty {
 
 .h-pos-center {
   position: absolute;
-  top: 15px;
+  top: 20px;
   left: 50%;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
@@ -1231,6 +1246,9 @@ body.s-no-purchases .purchases_empty {
 
 .c-grey {
   color: #959595; }
+
+.c-grey-700 {
+  color: #585858; }
 
 .c-white {
   color: white; }
